--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="navbar-brand col-lg-6 d-flex align-items-center animate__animated animate__swing" href="#">
                 <img src="images/Jadoo.png" alt="" width="115px" height="34px">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -172,7 +172,7 @@
       <div class="top-selling mt-5">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col-lg-4 col-12 col-md-6 " data-aos="flip-right"
+            <div class="col-lg-4 col-12 col-md-6 top-selling-hover" data-aos="flip-right"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -180,7 +180,7 @@
             data-aos-mirror="true"
             data-aos-once="false"
             data-aos-anchor-placement="center">
-              <div class="card h-100 " >
+              <div class="card h-100 selling" >
                 <img  src="images/italy.jpg" height="550px" class="card-img-top" alt="...">
                 <div class="card-body d-flex justify-content-between" style="font-size: 20px;font-weight: bold;">
                   <h5 class="card-title">Rome,Italy</h5>
@@ -192,7 +192,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-12 col-md-6" data-aos="flip-down"
+            <div class="col-lg-4 col-12 col-md-6 top-selling-hover" data-aos="flip-down"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -200,7 +200,7 @@
             data-aos-mirror="true"
             data-aos-once="false"
             data-aos-anchor-placement="center">
-              <div class="card h-100" >
+              <div class="card h-100 selling" >
                 <img  src="images/london.jpg" height="550px" class="card-img-top" alt="...">
                 <div class="card-body d-flex justify-content-between" style="font-size: 20px;font-weight: bold;">
                   <h5 class="card-title">London,UK</h5>
@@ -212,7 +212,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-12 col-md-6" data-aos="flip-left"
+            <div class="col-lg-4 col-12 col-md-6 top-selling-hover" data-aos="flip-left"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -220,7 +220,7 @@
             data-aos-mirror="true"
             data-aos-once="false"
             data-aos-anchor-placement="center">
-              <div class="card h-100" >
+              <div class="card h-100 selling" >
                 <img  src="images/europe.jpg" height="550px" class="card-img-top" alt="...">
                 <div class="card-body d-flex justify-content-between" style="font-size: 20px;font-weight: bold;">
                   <h5 class="card-title">Full Europe</h5>
@@ -235,6 +235,83 @@
           </div>
         </div>
       </div>
+      <!-- advertise -->
+      <div class="advertise">
+        <div class="container">
+          <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+            <div class="col-lg-3 col-6">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+                <img src="images/image 27.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+                <img src="images/image 28.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+                <img src="images/image 29.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+                <img src="images/image 27.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- form -->
+      <div class="container form bg-warning p-5">
+        <h1 class="volkhov" style="font-size: 40px; text-align: center;">SIGN UP</h1>
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Valid Email">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Valid Address">
+          </div>
+          
+          <div class="col-md-8">
+            <label for="inputState" class="form-label">City</label>
+            <select id="inputState" class="form-select">
+              <option selected>Choose...</option>
+              <option>Dhaka</option>
+              <option>Barishal</option>
+              <option>Chattogram</option>
+              <option> Khulna</option>
+              <option>Rajshahi</option>
+              <option>Rangpur</option>
+              <option>Mymensingh</option>
+              <option>Sylhet</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label for="inputZip" class="form-label">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                Check me out
+              </label>
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </div>
+        </form>
+      </div>
+
     </main>
     
 
