--- a/index.html
+++ b/index.html
@@ -87,6 +87,42 @@
           </div>
     </header>
     <main>
+      <!-- login -->
+      <div class="container login mt-5 bg-info p-5 " data-aos="fade-down"
+      data-aos-offset="200"
+      data-aos-delay="20"
+      data-aos-duration="1000"
+      data-aos-easing="ease-in-out"
+      data-aos-mirror="true"
+      data-aos-once="false"
+      data-aos-anchor-placement="center">
+        <h1 class="volkhov mb-5" style="font-size: 40px; text-align: center;">LOG IN</h1>
+        <form>
+          <div class="row mb-3">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword3">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-sm-10 offset-sm-2">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                <label class="form-check-label" for="gridCheck1">
+                  Agree and Continue...
+                </label>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
+      </div>
       <!-- category -->
       <div style="text-align: center;" class="container mt-5">
         <p>CATEGORY</p>
@@ -267,6 +303,14 @@
         <h1 class="volkhov" style="font-size: 40px; text-align: center;">SIGN UP</h1>
         <form class="row g-3">
           <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">First Name</label>
+            <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+          </div>
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Last Name</label>
+            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+          </div>
+          <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Email</label>
             <input type="email" class="form-control" id="inputEmail4" placeholder="Valid Email">
           </div>
@@ -291,7 +335,6 @@
               <option>Rangpur</option>
               <option>Mymensingh</option>
               <option>Sylhet</option>
-              <option>...</option>
             </select>
           </div>
           <div class="col-md-4">
