--- a/index.html
+++ b/index.html
@@ -274,24 +274,24 @@
       <!-- advertise -->
       <div class="advertise">
         <div class="container">
-          <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-            <div class="col-lg-3 col-6">
-              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+          <div class="row row-cols-2 row-cols-lg-5 g-lg-3">
+            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 27.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6">
-              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 28.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6">
-              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3  bg-body rounded advertise-hover">
                 <img src="images/image 29.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6">
-              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 mb-5 bg-body rounded advertise-hover">
+            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+              <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 27.png" alt="">
               </div>
             </div>
@@ -299,7 +299,7 @@
         </div>
       </div>
       <!-- form -->
-      <div class="container form bg-warning p-5">
+      <div class="container form bg-warning p-5 mt-5">
         <h1 class="volkhov" style="font-size: 40px; text-align: center;">SIGN UP</h1>
         <form class="row g-3">
           <div class="col-md-6">
