--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
+            <div class="container">
               <a class="navbar-brand col-lg-6 d-flex align-items-center animate__animated animate__swing" href="#">
                 <img src="images/Jadoo.png" alt="" width="115px" height="34px">
               </a>
@@ -403,9 +403,9 @@
             <p><a href="#">Low fare tips</a></p>
           </div>
           <div class="col-lg-3 footer-anchor">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
           </div>
         </div>
       </div>
