--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="category">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
-            <div class="col-lg-3 col-12 h-50" style="text-align: center;" data-aos="fade-right"
+            <div class="col-lg-3 col-12 col-sm-12 h-50" style="text-align: center;" data-aos="fade-right"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 h-50" style="text-align: center;"data-aos="fade-down"
+            <div class="col-lg-3 col-12 col-sm-12 h-50" style="text-align: center;"data-aos="fade-down"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -165,7 +165,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 h-50" style="text-align: center;" data-aos="fade-up"
+            <div class="col-lg-3 col-12 col-sm-12 h-50" style="text-align: center;" data-aos="fade-up"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 h-50" style="text-align: center;" data-aos="fade-left"
+            <div class="col-lg-3 col-12 col-sm-12 h-50" style="text-align: center;" data-aos="fade-left"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -209,7 +209,7 @@
       <div class="top-selling mt-5">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col-lg-3 col-12 col-md-6 top-selling-hover" data-aos="flip-right"
+            <div class="col-lg-3 col-12 col-sm-12 col-md-6 top-selling-hover" data-aos="flip-right"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -229,7 +229,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 col-md-6 top-selling-hover " data-aos="flip-down"
+            <div class="col-lg-3 col-12 col-sm-12 col-md-6 top-selling-hover " data-aos="flip-down"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -249,7 +249,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 col-md-6 top-selling-hover" data-aos="flip-left"
+            <div class="col-lg-3 col-12 col-sm-12 col-md-6 top-selling-hover" data-aos="flip-left"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -269,7 +269,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-12 col-md-6 top-selling-hover" data-aos="flip-up"
+            <div class="col-lg-3 col-12 col-sm-12 col-md-6 top-selling-hover" data-aos="flip-up"
             data-aos-offset="200"
             data-aos-delay="20"
             data-aos-duration="1000"
@@ -296,22 +296,22 @@
       <div class="advertise">
         <div class="container">
           <div class="row row-cols-2 row-cols-lg-5 g-lg-3">
-            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-3 col-6 col-sm-6 d-flex align-items-center justify-content-center">
               <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 27.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-3 col-6 col-sm-6 d-flex align-items-center justify-content-center">
               <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 28.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-3 col-6 col-sm-6 d-flex align-items-center justify-content-center">
               <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3  bg-body rounded advertise-hover">
                 <img src="images/image 29.png" alt="">
               </div>
             </div>
-            <div class="col-lg-3 col-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-3 col-6 col-sm-6 d-flex align-items-center justify-content-center">
               <div class="border bg-light d-flex justify-content-center h-50 w-75 shadow p-3 bg-body rounded advertise-hover">
                 <img src="images/image 27.png" alt="">
               </div>
